add question(desktop version)

--- a/question.html
+++ b/question.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Результат</title>
+    <title>Питання та відповіді</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
@@ -216,121 +216,57 @@
             <a href="#">Головна</a>
         </li>
         <li class="bread_link">
-            <a href="#">
-                <img src="./img/arrow_left.svg" alt="">
-                Опитування виборців
-            </a>
-        </li>
-        <li class="bread_link">
             <img src="./img/arrow_left.svg" alt="">
-            Результат опитування
+            Питання та відповіді
         </li>
     </ul>
     <section class="voter">
         <div class="page_news_top voter_top">
-            <h1 class="text_big_all">Результат опитування </h1>
+            <h1 class="text_big_all">Питання та відповіді</h1>
         </div>
-        <div class="news_page voter_page_grid">
-            <div class="voter_page_grid_r result_r">
-                <div class="voter_page_grid_l_text">Найбільш популярні выдповіді
+        <div class="question_grid">
+            <div class="question_grid_row">
+                <div class="question_grid_row_l">Про партію</div>
+                <div class="question_grid_row_r">
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
+                    <a href="#" class="question_grid_link">Хто є засновником та основую політичної партії “Назва партії”</a>
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
+                    <a href="#" class="question_grid_link">Хто є засновником та основую політичної партії “Назва партії”</a>
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
                 </div>
-                <div class="result_grid ">
-
-                    <div class="result_items">
-                        <div class="result_items_text">
-                            1. Якась назва питання, може бути декілька строчек або більше ніж дві строчки. Назва питання
-                            та
-                            нижче будуть йти варіанти відповідей?
-                        </div>
-                        <div class="result_items_text_b">
-                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може бути і
-                            короткий.
-                        </div>
-                        <div class="result_row">
-                            <div class="result_line">
-                                <div></div>
-                            </div>
-                            <div class="result_line_number">64%</div>
-                        </div>
-                    </div>
-                    <div class="result_items">
-                        <div class="result_items_text">
-                            1. Якась назва питання, може бути декілька строчек або більше ніж дві строчки. Назва питання
-                            та
-                            нижче будуть йти варіанти відповідей?
-                        </div>
-                        <div class="result_items_text_b">
-                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може бути і
-                            короткий.
-                        </div>
-                        <div class="result_row">
-                            <div class="result_line">
-                                <div></div>
-                            </div>
-                            <div class="result_line_number">24%</div>
-                        </div>
-                    </div>
-                    <div class="result_items">
-                        <div class="result_items_text">
-                            1. Якась назва питання, може бути декілька строчек або більше ніж дві строчки. Назва питання
-                            та
-                            нижче будуть йти варіанти відповідей?
-                        </div>
-                        <div class="result_items_text_b">
-                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може бути і
-                            короткий.
-                        </div>
-                        <div class="result_row">
-                            <div class="result_line">
-                                <div></div>
-                            </div>
-                            <div class="result_line_number">94%</div>
-                        </div>
-                    </div>
-                    <div class="result_items">
-                        <div class="result_items_text">
-                           2. Якась назва питання, може бути декілька строчек або більше ніж дві строчки. Назва питання
-                            та
-                            нижче будуть йти варіанти відповідей?
-                        </div>
-                        <div class="result_items_text_b">
-                            Варіант відповді на питання.
-                        </div>
-                        <div class="result_row">
-                            <div class="result_line">
-                                <div></div>
-                            </div>
-                            <div class="result_line_number">100%</div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
-            <div class="voter_page_grid_r news_page_r">
-
-                <div class="container_interview_items">
-                    <div class="label_interview">Опитування</div>
-                    <div class="container_interview_items_text">Що для Вас управління містом у смартфоні?</div>
-                    <p class="container_interview_items_text_s">
-                        Якійсь абзац тексту про те, навіщо виборцю проходити опитування і що він, як виборець, зможе
-                        допомогти, якщо він пройде це опитування. Якійсь абзац тексту про те. навіщо виборцю проходити
-                        опитування і що він.
-                    </p>
-                    <div class="container_interview_items_row">
-                        <div class="interview_icon">
-                            <img src="./img/poll%201.svg" alt="">
-                        </div>
-                        <div class="interview_text">
-                            <p>Опитування прошли вже:</p>
-                            <span>24 780 виборців</span>
-                        </div>
-                    </div>
-                    <div class="container_button">
-                        <a href="#" class="button_all">Пройти опитування</a>
-                        <p>*Це займе не більш ніж три хвилини Вашого часу. Усього 20 питань.</p>
-                    </div>
+            <div class="question_grid_row">
+                <div class="question_grid_row_l">Про партійні штаби</div>
+                <div class="question_grid_row_r">
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
+                    <a href="#" class="question_grid_link">Хто є засновником та основую політичної партії “Назва партії”</a>
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
                 </div>
-
+            </div>
+            <div class="question_grid_row">
+                <div class="question_grid_row_l">Цілі політичної партії</div>
+                <div class="question_grid_row_r">
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
+                </div>
+            </div>
+            <div class="question_grid_row">
+                <div class="question_grid_row_l">Про ініціативи</div>
+                <div class="question_grid_row_r">
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
+                    <a href="#" class="question_grid_link">Хто є засновником та основую політичної партії “Назва партії”</a>
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
+                    <a href="#" class="question_grid_link">Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?</a>
+                    <a href="#" class="question_grid_link">Що особисто мені дасть вступ до партії</a>
+                </div>
             </div>
         </div>
     </section>
