add consignment_page and question_page

--- a/question_page.html
+++ b/question_page.html
@@ -1,8 +1,8 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Пария станица</title>
+    <title>Питання та відповіді внутреняя</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
@@ -210,137 +210,61 @@
         </div>
     </div>
 </header>
-<div class="container_all container_home container_news_page_next">
+<div class="container_all container_home container_voter">
     <ul class="bread_crumbs">
         <li class="bread_link">
             <a href="#">Головна</a>
         </li>
         <li class="bread_link">
-            <img src="./img/arrow_left.svg" alt="">
-            <a href="#">Новини</a>
+            <a href="#">
+                <img src="./img/arrow_left.svg" alt="">
+                Питання та відповіді
+            </a>
         </li>
         <li class="bread_link">
             <img src="./img/arrow_left.svg" alt="">
-            Що для Вас управління містом у смартфоні?
+            Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?
         </li>
     </ul>
-    <section class="page_news consignment_page">
-        <div class="page_news_top">
-            <h1 class="text_big_all">Що для Вас управління містом у смартфоні?</h1>
+    <section class="voter">
+        <div class="page_news_top voter_top">
+            <h1 class="text_big_all">Якесь питання про політичну программу партії, яке може розкрити суть, що це
+                таке?</h1>
         </div>
         <div class="news_page">
             <div class="news_page_l">
-                <div class="news_page_l_content consignment_page_l_content">
-                    <div class="news_page_l_content_size consignment_page_b">
-                        <p>Крім цього, з 15 червня відновлюється міжнародне авіасполучення з країнами, які відкрили свої
-                            аеропорти для літаків з України. Боротьба з пандемією ще триває, тому закликаємо не забувати
-                            мити руки з милом, обробляти їх антисептиками та носити захисні маски.
-                        </p>
-                    </div>
-                    <img src="./img/image%2014.png" alt="">
-                    <div class="news_page_l_content_size">
-                        <p>До речі, подорожувати Україною поїздом ви можете за водійським посвідченням, ID-карткою або
-                            закордонним паспортом у Дії.
-                        </p>
-                        <p>
-                            Заклади громадського харчування зможуть приймати відвідувачів у приміщенні, але одна умова —
-                            обов'язкове дотримання усіх протиепідемічних заходів. Також українцям, старшим 60 років, з
-                            п'ятниці буде дозволено не дотримуватися самоізоляції. Урядовці дозволили проведення
-                            релігійних заходів та акредитацію освітніх програм ВНЗ, за якими готують студентів.
-                        </p>
-                        <p>
-                            Крім цього, з 15 червня відновлюється міжнародне авіасполучення з країнами, які відкрили
-                            свої аеропорти для літаків з України. Боротьба з пандемією ще триває, тому закликаємо не
-                            забувати мити руки з милом, обробляти їх антисептиками та носити захисні маски.</p>
-                        <h3>Сьогодні на засіданні Уряд послабив карантин. З 5 червня дозволено роботу ресторанів та
-                            кафе, а також внутрішні авіаперевезення.</h3>
-                        <p>
-                            Заклади громадського харчування зможуть приймати відвідувачів у приміщенні, але одна умова —
-                            обов'язкове дотримання усіх протиепідемічних заходів. Також українцям, старшим 60 років, з
-                            п'ятниці буде дозволено не дотримуватися самоізоляції. Урядовці дозволили проведення
-                            релігійних заходів та акредитацію освітніх програм ВНЗ, за якими готують студентів.
-                        </p>
-                        <h3>Нагадаємо, як отримати послугу ID-14:</h3>
-                        <ul>
-                            <li>Зберіть документи: свідоцтво про народження, довідку про реєстрацію місця проживання та
-                                документи, що посвідчують батьків або одного з них.
-                            </li>
-                            <li>Зверніться до центру надання адміністративних послуг, підрозділу Державної міграційної
-                                служби чи центру обслуговування “Паспортний сервіс” ДП “Документ” за зареєстрованим
-                                місцем проживання. Під час карантину можна звернутися до будь-якого з них незалежно від
-                                реєстрації місця проживання.
-                            </li>
-                            <li>Отримайте паспорт у формі картки на 4 роки.</li>
-                        </ul>
-                    </div>
-                    <div class="video_block">
-                        <div class="button_play">
-                            <img src="./img/Polygon%202.svg" class="img-svg" alt="">
-                        </div>
-                        <video controls width="710" height="538" poster="./img/Rectangle%2017.png" preload="none">
-                            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
-                                    type="video/mp4">
-                        </video>
-                    </div>
+                <div class="voter_page_grid_l_text">Якась назва питання, може бути декілька строчек або більше
+                    ніж дві
+                    строчки. Назва питання та нижче будуть йти варіанти відповідей?
                 </div>
+                <div class="news_page_l_content_size size_page">
+                    <p>До речі, подорожувати Україною поїздом ви можете за водійським посвідченням, ID-карткою або
+                        закордонним паспортом у Дії.
+                    </p>
+                    <p>
+                        Заклади громадського харчування зможуть приймати відвідувачів у приміщенні, але одна умова —
+                        обов'язкове дотримання усіх протиепідемічних заходів. Також українцям, старшим 60 років, з
+                        п'ятниці буде дозволено не дотримуватися самоізоляції. Урядовці дозволили проведення релігійних
+                        заходів та акредитацію освітніх програм ВНЗ, за якими готують студентів.
+                    </p>
+                    <p>
+                        Крім цього, з 15 червня відновлюється міжнародне авіасполучення з країнами, які відкрили свої
+                        аеропорти для літаків з України. Боротьба з пандемією ще триває, тому закликаємо не забувати
+                        мити руки з милом, обробляти їх антисептиками та носити захисні маски.
+                    </p>
+                </div>
+            </div>
 
+            <div class="container_what_items news_page_r question_page_r">
+                <div class="container_what_items_text">Про партію</div>
+                <ul class="container_what_link">
+                    <li><a href="#">Чому я маю віддати свій голос за партію “Назва партії”?</a></li>
+                    <li><a href="#">Що особисто мені дасть вступ до партії</a></li>
+                    <li><a href="#">Хто є засновником та основую політичної партії “Назва партії”</a></li>
+                </ul>
             </div>
-            <div class="news_page_r consignment_page_r">
-                <div class="consignment_page_r_text">
-                    Брати участь в ініціативі
-                </div>
-                <form class="ui form consignment_form">
-                    <div class="field">
-                        <label>Як тебе звати?</label>
-                        <input type="text" name="first-name" placeholder="Введіть Ваше ім’я та призвище">
-                    </div>
-                    <div class="field">
-                        <label>Напишіть свою e-mail пошту</label>
-                        <input type="text" name="last-name" placeholder="Наприклад: olga.ivanova@gmail.com">
-                    </div>
-                    <div class="field">
-                        <label>Введіть свій номер телефону</label>
-                        <input type="text" name="first-name" placeholder="+380 (__) - __ - __ - ___">
-                    </div>
-                    <div class="field">
-                        <label>Місто чи населений пункт</label>
-                        <select multiple="" class="ui search  dropdown">
-                            <option value="">Введіть Ваше місто/селище</option>
-                            <option value="AF">Afghanistan</option>
-                            <option value="AX">Åland Islands</option>
-                        </select>
-                    </div>
-                    <div class="checkbox_container field">
-                        <label>Виберіть Вашу стать</label>
-                        <div class="fields">
-                            <div class="field">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" name="man" tabindex="0" class="hidden">
-                                    <label>Чоловік</label>
-                                </div>
-                            </div>
-                            <div class="field">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" name="woman" tabindex="0" class="hidden">
-                                    <label>Жінка</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="content_personal">
-                        <div class="ui checkbox">
-                            <input type="checkbox" name="example">
-                            <label>Згода на обробку персональних даних</label>
-                        </div>
-                        <button class="ui primary button button_all ">
-                            Приєднатися до наc
-                        </button>
-                    </div>
-                </form>
-            </div>
+
         </div>
-
-
     </section>
 </div>
 <section class="container_idea container_all">
@@ -368,7 +292,7 @@
         </div>
         <div class="container_idea_text">Як стати депутатом</div>
     </a>
-   <a href="#" class="container_idea_items">
+    <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
             <img src="./img/mailing_2%201.svg" alt="">
         </div>
