--- a/face.html
+++ b/face.html
@@ -1,8 +1,8 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Пария станица</title>
+    <title>Обличча</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
@@ -210,137 +210,153 @@
         </div>
     </div>
 </header>
-<div class="container_all container_home container_news_page_next">
+<div class="container_all container_home">
     <ul class="bread_crumbs">
         <li class="bread_link">
             <a href="#">Головна</a>
         </li>
         <li class="bread_link">
             <img src="./img/arrow_left.svg" alt="">
-            <a href="#">Новини</a>
-        </li>
-        <li class="bread_link">
-            <img src="./img/arrow_left.svg" alt="">
-            Що для Вас управління містом у смартфоні?
+            Обличча
         </li>
     </ul>
-    <section class="page_news consignment_page">
-        <div class="page_news_top">
-            <h1 class="text_big_all">Що для Вас управління містом у смартфоні?</h1>
+    <section class="face">
+        <div class="page_news_top voter_top">
+            <h1 class="text_big_all">Обличча партії</h1>
         </div>
-        <div class="news_page">
-            <div class="news_page_l">
-                <div class="news_page_l_content consignment_page_l_content">
-                    <div class="news_page_l_content_size consignment_page_b">
-                        <p>Крім цього, з 15 червня відновлюється міжнародне авіасполучення з країнами, які відкрили свої
-                            аеропорти для літаків з України. Боротьба з пандемією ще триває, тому закликаємо не забувати
-                            мити руки з милом, обробляти їх антисептиками та носити захисні маски.
-                        </p>
-                    </div>
-                    <img src="./img/image%2014.png" alt="">
-                    <div class="news_page_l_content_size">
-                        <p>До речі, подорожувати Україною поїздом ви можете за водійським посвідченням, ID-карткою або
-                            закордонним паспортом у Дії.
-                        </p>
-                        <p>
-                            Заклади громадського харчування зможуть приймати відвідувачів у приміщенні, але одна умова —
-                            обов'язкове дотримання усіх протиепідемічних заходів. Також українцям, старшим 60 років, з
-                            п'ятниці буде дозволено не дотримуватися самоізоляції. Урядовці дозволили проведення
-                            релігійних заходів та акредитацію освітніх програм ВНЗ, за якими готують студентів.
-                        </p>
-                        <p>
-                            Крім цього, з 15 червня відновлюється міжнародне авіасполучення з країнами, які відкрили
-                            свої аеропорти для літаків з України. Боротьба з пандемією ще триває, тому закликаємо не
-                            забувати мити руки з милом, обробляти їх антисептиками та носити захисні маски.</p>
-                        <h3>Сьогодні на засіданні Уряд послабив карантин. З 5 червня дозволено роботу ресторанів та
-                            кафе, а також внутрішні авіаперевезення.</h3>
-                        <p>
-                            Заклади громадського харчування зможуть приймати відвідувачів у приміщенні, але одна умова —
-                            обов'язкове дотримання усіх протиепідемічних заходів. Також українцям, старшим 60 років, з
-                            п'ятниці буде дозволено не дотримуватися самоізоляції. Урядовці дозволили проведення
-                            релігійних заходів та акредитацію освітніх програм ВНЗ, за якими готують студентів.
-                        </p>
-                        <h3>Нагадаємо, як отримати послугу ID-14:</h3>
-                        <ul>
-                            <li>Зберіть документи: свідоцтво про народження, довідку про реєстрацію місця проживання та
-                                документи, що посвідчують батьків або одного з них.
-                            </li>
-                            <li>Зверніться до центру надання адміністративних послуг, підрозділу Державної міграційної
-                                служби чи центру обслуговування “Паспортний сервіс” ДП “Документ” за зареєстрованим
-                                місцем проживання. Під час карантину можна звернутися до будь-якого з них незалежно від
-                                реєстрації місця проживання.
-                            </li>
-                            <li>Отримайте паспорт у формі картки на 4 роки.</li>
-                        </ul>
-                    </div>
-                    <div class="video_block">
-                        <div class="button_play">
-                            <img src="./img/Polygon%202.svg" class="img-svg" alt="">
-                        </div>
-                        <video controls width="710" height="538" poster="./img/Rectangle%2017.png" preload="none">
-                            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
-                                    type="video/mp4">
-                        </video>
-                    </div>
+        <div class="face_grid">
+            <div class="face_top">
+                <div></div>
+                <div class="face_top_title">
+                    <div class="face_right_top_text_s">Голова партії</div>
+                    <div class="face_right_top_text_b">Олександр Фельдман</div>
                 </div>
-
             </div>
-            <div class="news_page_r consignment_page_r">
-                <div class="consignment_page_r_text">
-                    Брати участь в ініціативі
+            <div class="face_bottom">
+                <div class="face_right_img">
+                    <img src="./img/DSC1827a2%201.png" alt="">
                 </div>
-                <form class="ui form consignment_form">
-                    <div class="field">
-                        <label>Як тебе звати?</label>
-                        <input type="text" name="first-name" placeholder="Введіть Ваше ім’я та призвище">
-                    </div>
-                    <div class="field">
-                        <label>Напишіть свою e-mail пошту</label>
-                        <input type="text" name="last-name" placeholder="Наприклад: olga.ivanova@gmail.com">
-                    </div>
-                    <div class="field">
-                        <label>Введіть свій номер телефону</label>
-                        <input type="text" name="first-name" placeholder="+380 (__) - __ - __ - ___">
-                    </div>
-                    <div class="field">
-                        <label>Місто чи населений пункт</label>
-                        <select multiple="" class="ui search  dropdown">
-                            <option value="">Введіть Ваше місто/селище</option>
-                            <option value="AF">Afghanistan</option>
-                            <option value="AX">Åland Islands</option>
-                        </select>
-                    </div>
-                    <div class="checkbox_container field">
-                        <label>Виберіть Вашу стать</label>
-                        <div class="fields">
-                            <div class="field">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" name="man" tabindex="0" class="hidden">
-                                    <label>Чоловік</label>
-                                </div>
-                            </div>
-                            <div class="field">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" name="woman" tabindex="0" class="hidden">
-                                    <label>Жінка</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="content_personal">
-                        <div class="ui checkbox">
-                            <input type="checkbox" name="example">
-                            <label>Згода на обробку персональних даних</label>
-                        </div>
-                        <button class="ui primary button button_all ">
-                            Приєднатися до наc
-                        </button>
-                    </div>
-                </form>
+                <div class="face_right_bottom news_page_l_content_size">
+                    <p>У листопаді 2008 р за вагомий особистий внесок у розвиток міжконфесійного діалогу Патріарх
+                        Єрусалимський Теофілос III нагородив О. Фельдмана орденом «Святогорбского братства».
+                    </p>
+                    <p>
+                        У 2013 році О. Фельдман був удостоєний звання «Почесний громадянин міста Харкова».
+                    </p>
+                    <p>
+                        У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                        організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО, ЮНІСЕФ та
+                        Економічній і соціальній раді при ООН.
+                    </p>
+                    <p>
+                        З 2018 року — президент Всесвітнього відкритого фонду реабілітації та реінтродукції тварин
+                        (WOFARR).</p>
+
+                </div>
             </div>
         </div>
-
-
+        <div class="committee">
+            <div class="committee_text">Міський політичний комітет
+            </div>
+            <div class="committee_grid">
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2010.png" alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2024.png " alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2025.png" alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2010.png" alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2024.png " alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2025.png" alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="committee">
+            <div class="committee_text">Регіональний політичний комітет
+            </div>
+            <div class="committee_grid">
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2010.png" alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2024.png " alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+                <div class="committee_grid_item">
+                    <div class="committee_img">
+                        <img src="./img/Rectangle%2025.png" alt="">
+                    </div>
+                    <div class="committee_content">
+                        <div class="committee_content_title">Іванов Іван Іванович</div>
+                        <p>У 2017 році обраний членом правління міжнародної організації «Релігії за мир» — пацифістської
+                            організації зі штаб-квартирою в Нью-Йорку, яка має консультативний статус при ЮНЕСКО.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </div>
 <section class="container_idea container_all">
@@ -368,7 +384,7 @@
         </div>
         <div class="container_idea_text">Як стати депутатом</div>
     </a>
-   <a href="#" class="container_idea_items">
+    <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
             <img src="./img/mailing_2%201.svg" alt="">
         </div>
